<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TabHost
        android:layout_width="200dip"
        android:layout_height="300dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/Login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="80dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/name"/>

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                        <EditText
                            android:id="@+id/signup_input_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="Name"
                            tools:ignore="HardcodedText"/>

                    <EditText
                        android:id="@+id/signup_input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:hint="Email"
                        tools:ignore="HardcodedText"/>

                        <EditText
                            android:id="@+id/signup_input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPassword"
                            android:hint="@string/hint_password" />

                        <EditText
                            android:id="@+id/signup_input_age"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/hint_dob"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp">
                        <TextView
                            android:id="@+id/gender_textview"
                            android:paddingRight="15dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hint_gender"
                            android:fontFeatureSettings="@string/hint_password"
                            android:textSize="20sp"
                            android:fontFamily="@string/hint_password"
                            tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute"/>
                        <RadioGroup
                            android:id="@+id/gender_radio_group"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/gender_textview"
                            android:orientation="horizontal"
                            tools:ignore="RtlHardcoded">
                            <RadioButton
                                android:id="@+id/male_radio_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/male"
                                android:checked="true"
                                />
                            <RadioButton
                                android:id="@+id/female_radio_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text = "@string/female"
                                />
                        </RadioGroup>
                    </RelativeLayout>
                    <Button android:id="@+id/btn_signup"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_sign_up"
                            android:background="@color/login_button_background"
                            android:layout_marginTop="40dp"
                            android:textColor="@android:color/white"/>
                    <Button android:id="@+id/btn_link_login"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_link_login"
                            android:background="@null"
                            android:layout_marginTop="3dp"
                            android:textColor="@android:color/black"/>

                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>